@@ -8,6 +8,7 @@
 - Better horizontal distribution when printing
 - Fixed beaming problems when using multiple time signatures
 - Added new time sig picker, making the interface much nicer when using multiple key sigs
+- Added pause button
 
 1.2b2
 - Fixed issues with track reordering
